[tool.poetry]
name = "ytbot"
version = "0.1.0"
description = ""
authors = ["fontanads <fontanads@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.analytics.dependencies]
pandas = "^2.0.0"
numpy = "^1.24.2"
altair = "^4.2.2"


[tool.poetry.group.cloud.dependencies]
google-api-python-client = "^2.84.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth = "^2.17.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
ipywidgets = "^8.0.6"
jupyterlab = "^3.6.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
tox = "^4.4.11"
coverage = "^7.2.3"

[tool.pytest.ini_options]
addopts = "--cov=ytbot --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
